final ui commit

--- a/src/view/style/style.css
+++ b/src/view/style/style.css
@@ -19,7 +19,11 @@
     margin: 0;
     padding: 0 20px;
     text-decoration: none;
-    color: gray;
+    color: black;
+}
+.activeLink{
+    background-color: red;
+    color: blue;
 }
 
 
