redux setup and card initial satge

--- a/src/view/component/listingcard/ListingCard.css
+++ b/src/view/component/listingcard/ListingCard.css
@@ -10,6 +10,14 @@
   position: relative;
 }
 
+@media (max-width:576px) {
+.listing-card{
+  width: 100%;
+}
+
+  
+}
+
 .header {
   display: flex;
   justify-content: space-between;
