--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.sizeactive{
+  background-color: green;
+}
+.coloractive{
+  border: 1px solid green;
+}
