this is correction commit in ui

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+:root{
+  --black: #000000ff;
+  --oxford-blue: #14213dff;
+  --orange-web: #fca311ff;
+  --platinum: #e5e5e5ff;
+  --white: #ffffffff;
+}
+
 .App {
   text-align: center;
 }
