--- a/src/view/component/catr/ProductCard.css
+++ b/src/view/component/catr/ProductCard.css
@@ -4,11 +4,72 @@
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     padding: 15px;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-between;
     border: 1px solid #ddd;
-  }
+    width: 100%;
+    flex-wrap: wrap;
+}
   
+@media (max-width:480px) {
+
+  .price-section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;    
+  }
+  .price{
+    margin: 0;
+  }
+  .hide-span{
+    display: none;
+  }
+}
+
+.cart-layout{
+  display: flex;  
+  flex-direction: column;
+  max-width: 1500px;
+  margin: auto;
+}
+
+@media (min-width:768px) {
+  .cart-layout{
+    flex-direction: row;
+}
+}
+
+.qty-counter{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
+  font-weight: bold;
+  width: 75px;
+}
+
+.qty-counter div{
+  height: 25px;
+  width: 25px;
+  background-color: #fbf1f1;
+  border-radius: 50%;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  padding: 0;
+  line-height: 0;
+  margin: 0;
+  color: darkseagreen;
+}
+.qty-counter div:hover{
+  background-color: #666;
+  cursor: pointer;
+}
+
+
   .product-image {
     width: 80px;
     height: 80px;
@@ -47,14 +108,17 @@
     color: #666;
   }
   
-  .price-section {
-    text-align: right;
-  }
+  .price-section {    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;}
   
   .price {
     font-size: 18px;
     font-weight: bold;
     color: #333;
+    margin: 10px 0;
   }
   
   .old-price {
@@ -69,13 +133,12 @@
   }
   
   .details-btn, .wishlist-btn {
-    background: blue;
+    background: var(--oxford-blue);
     color: white;
     border: none;
     padding: 5px 10px;
     cursor: pointer;
     border-radius: 5px;
-    margin-top: 5px;
   }
   
   .wishlist-btn {
@@ -83,4 +146,4 @@
     color: blue;
     border: 1px solid blue;
   }
-  
+ 
