--- a/src/view/style/style.css
+++ b/src/view/style/style.css
@@ -24,6 +24,7 @@ body {
   align-items: center;
   height: 15px;
   font-weight: 600;
+  width: fit-content;
 }
 
 .Link:hover {
@@ -75,6 +76,33 @@ body {
   justify-content: flex-end;
 }
 
+.flash-msg{ 
+    position: fixed;
+    z-index: 999;
+    background: #faebd7;
+    border-radius: 25px;
+    padding: 5px 25px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: fit-content;
+    box-shadow: 0px 0px 7px 1px var(--platinum);
+    color: var(--oxford-blue);
+    text-transform: capitalize;
+    font-size: 12px;
+    bottom: 25px;
+  }
+
+
+
+@keyframes fill {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
 @keyframes process {
   from {
     width: 0;
